force-app/main/default/objects/Patient__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>CASE( MONTH( TODAY()) - MONTH( DOB__c ),
       0, 
       IF(DAY(TODAY()) &gt;= DAY(DOB__c), YEAR(TODAY())-YEAR(DOB__c), YEAR(TODAY())-YEAR(DOB__c)-1), 
       IF(MONTH(TODAY()) &lt; MONTH(DOB__c), YEAR(TODAY())-YEAR(DOB__c)-1, YEAR(TODAY())-YEAR(DOB__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>