force-app/main/default/objects/Patient__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guntur</fullName>
            </value>
            <value>
                <fullName>Kadapa</fullName>
            </value>
            <value>
                <fullName>Ongole</fullName>
            </value>
            <value>
                <fullName>Chittoor</fullName>
            </value>
            <value>
                <fullName>Rajahmundry</fullName>
            </value>
            <value>
                <fullName>Kakinada</fullName>
            </value>
            <value>
                <fullName>Vizag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>